[package]
name = "gzpi"
version = "0.1.0"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-walkdir = "0.2.0"
clap = { version = "2.33.3", features = ["yaml"] }
colored = "2.0.0"
flate2 = "1.0.20"
futures = "0.3.15"
gitignore = "1.0.7"
id_tree = "1.8.0"
tokio = { version = "1.6.1", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
